--- a/cluster-elasticsearch.yml
+++ b/cluster-elasticsearch.yml
@@ -4,10 +4,10 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: es01
     environment:
-      - node.name=es01
-      - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es02,es03
-      - cluster.initial_master_nodes=es01,es02,es03
+      - node.name=es01 #assign a name to the node
+      - cluster.name=es-docker-cluster # define the cluster name
+      - discovery.seed_hosts=es02,es02 # declare the available nodes
+      - cluster.initial_master_nodes=es01,es02 # negotiation of which node is eligible to be the master
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -25,10 +25,10 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: es02
     environment:
-      - node.name=es02
-      - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es01,es03
-      - cluster.initial_master_nodes=es01,es02,es03
+      - node.name=es02  #assign a name to the node
+      - cluster.name=es-docker-cluster # define the cluster name
+      - discovery.seed_hosts=es01,es02 # declare the available nodes
+      - cluster.initial_master_nodes=es01,es02 # negotiation of which node is eligible to be the master
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -40,31 +40,10 @@ services:
     networks:
       - elastic
 
-  es03:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
-    container_name: es03
-    environment:
-      - node.name=es03
-      - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es01,es02
-      - cluster.initial_master_nodes=es01,es02,es03
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data03:/usr/share/elasticsearch/data
-    networks:
-      - elastic
-
 volumes:
   data01:
     driver: local
   data02:
-    driver: local
-  data03:
     driver: local
 
 networks:
